Installasi halaman admin

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
         "postcss": "^8.1.14",
         "sass": "^1.69.5",
         "vite": "^5.0.7"
+    },
+    "dependencies": {
+        "feather-icons": "^4.29.1",
+        "resize-observer-polyfill": "^1.5.1",
+        "simplebar": "^6.2.5"
     }
 }
