--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.6.2",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.2",
         "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.69.5",
-        "vite": "^5.0.7"
+        "vite": "^4.0.4"
     },
     "dependencies": {
+        "datatables.net-bs5": "^1.13.8",
         "feather-icons": "^4.29.1",
+        "jquery": "^3.7.1",
         "resize-observer-polyfill": "^1.5.1",
-        "simplebar": "^6.2.5"
+        "simplebar": "^6.2.5",
+        "sweetalert2": "^11.10.1"
     }
 }
