--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^3.7",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.8",
@@ -13,6 +14,8 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "midtrans/midtrans-php": "^2.5",
+        "ramsey/uuid": "^4.7",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
